--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,16 +15,22 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
-            resValue "string","banner_ID","ca-app-pub-6343128929720966/8258266768"
-            resValue "string","INTERSTITIAL_ADD_ID","ca-app-pub-3940256099942544/1033173712"
+            resValue "string","INTERSTITIAL_ADD_ID","ca-app-pub-6343128929720966/7269294744"
+            resValue "string","INTERSTITIAL_HISTORY_ID","ca-app-pub-6343128929720966/3378699930"
+            resValue "string","INTERSTITIAL_SETTINGS_ID","ca-app-pub-6343128929720966/9752536592"
+            resValue "string","INTERSTITIAL_ATTRIBUTION_ID","ca-app-pub-6343128929720966/8439454920"
+            resValue "string","INTERSTITIAL_RATING_ID","ca-app-pub-6343128929720966/5162006155"
         }
         debug{
-            resValue "string","banner_ID","ca-app-pub-3940256099942544/6300978111"
             resValue "string","INTERSTITIAL_ADD_ID","ca-app-pub-3940256099942544/1033173712"
+            resValue "string","INTERSTITIAL_HISTORY_ID","ca-app-pub-3940256099942544/1033173712"
+            resValue "string","INTERSTITIAL_SETTINGS_ID","ca-app-pub-3940256099942544/1033173712"
+            resValue "string","INTERSTITIAL_ATTRIBUTION_ID","ca-app-pub-3940256099942544/1033173712"
+            resValue "string","INTERSTITIAL_RATING_ID","ca-app-pub-3940256099942544/1033173712"
         }
     }
 }
-
+apply plugin: 'com.android.application'
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.1.0'
@@ -39,3 +45,4 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 }
+apply plugin: 'com.google.gms.google-services'
